# Avans-LINAL

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
sim/: main.cpp
src/: Config.hpp  Game.cpp  Game.hpp  main.cpp
src/Engine/: Color.cpp  Color.hpp  Debug.hpp  Input.cpp  Input.hpp  InputManager.cpp  InputManager.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
src/Entities/: Block.hpp  Bullet.hpp  Camera.hpp  CelestialBody.hpp  Cube.hpp  Entities.hpp  Ship.hpp  Spaceship.hpp
src/Entities/Common/: Entity.hpp  IDrawable.hpp  ITransformable.hpp  IUpdatable.hpp
src/Enums/: WindowView.hpp
src/Models/: Box.hpp  Matrix.hpp  Models.hpp  Point.hpp  Vector.hpp
src/Models/Common/: FriendOperators.hpp  IModel.hpp  Model.hpp  Stringable.hpp
src/Utils/: MathUtil.hpp
tests/Models/: MatrixTests.cpp  PointTests.cpp  VectorTests.cpp
